--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <script>
         console.log('6666666666')
     </script>
+    <script>
+        alert('666666')
+    </script>
 </body>
 </html>
